[gd_scene load_steps=3 format=2]

[ext_resource path="res://GameHUDRelated/TowerIconPanel/TowerIconPanel.gd" type="Script" id=1]
[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButton.tscn" type="PackedScene" id=2]

[node name="TowerIconPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerIcon" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="TowerBorderPicButton" parent="." instance=ExtResource( 2 )]
[connection signal="pressed_mouse_event" from="TowerBorderPicButton" to="." method="_on_TowerBorderPicButton_pressed_mouse_event"]
